--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>TodoList</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;600&display=swap"
       rel="stylesheet"
